--- a/app/package.json
+++ b/app/package.json
@@ -11,11 +11,15 @@
   },
   "dependencies": {
     "axios": "^1.6.8",
+    "crypto": "^1.0.1",
+    "crypto-js": "^4.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.23.1"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
+    "@types/node": "^20.12.12",
     "@types/react": "^18.2.66",
     "@types/react-dom": "^18.2.22",
     "@typescript-eslint/eslint-plugin": "^7.2.0",
